# cursor-i18n-zh

./: .gitignore  CHANGELOG.md  Cursor汉化助手-图形界面.cmd  Cursor汉化助手.cmd  LICENSE  README.md  THIRD_PARTY_LICENSES  package-lock.json  package.json  一键安装汉化.cmd  还原默认.cmd
.github/releases/: v0.3.1.md  v0.3.6.md  v0.3.7.md  v0.3.8.md  v0.3.9.md  v0.4.0.md  v0.4.1.md  v0.4.2.md
.github/workflows/: build.yml  cursor-compat.yml
compat/: cursor-stable.json
desktop-sample/: .gitignore  README.md
desktop-sample/resources/: extension-market.json
desktop-sample/resources/claude/: SOURCE.md  translation_memory.json
desktop-sample/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-sample/src-tauri/capabilities/: main.json
desktop-sample/src-tauri/src/: extensions.rs  github.rs  main.rs  market.rs  network.rs  release.rs  usage.rs
desktop-sample/src-tauri/src/adapters/: claude.rs  cursor.rs  mod.rs
desktop-sample/src-tauri/src/extensions/: health.rs  history.rs  security.rs  targets.rs  transfer.rs
desktop-sample/ui/: app.js  index.html  styles.css
dict/: 00-common.json  10-chat.json  20-settings.json  30-editor.json  40-panels.json  50-tray.json  nls.json
scripts/: cursor-compat.js  cursor-i18n-helper.cmd  get-cursor-release.ps1  gui.cmd  gui.ps1  helper.js  install.cmd  package-desktop.ps1  package-macos.sh  package.ps1  restore.cmd  security-check.js  status.cmd  test.js  update-cursor-baseline.js
src/: argv.js  backup.js  cli.js  compat.js  config.js  dict.js  discover.js  engine.js  locale.js  locate.js  nls.js  scan.js  settings-usage.js  transaction.js  user-state.js  util.js
test/: argv.test.js  backup.test.js  cli.test.js  compat-baseline.test.js  compat.test.js  cursor-process.test.js  desktop-ui.test.js  dict.test.js  discover.test.js  engine.test.js  install-state-rollback.test.js  locale.test.js  locate.test.js  nls.test.js  patch-plan.test.js  settings-usage.test.js  transaction.test.js  user-state.test.js
(+1 files in other folders)
