[package]
name = "cursor-i18n-desktop-sample"
version = "0.3.8"
description = "Cross-platform desktop localization workbench"
authors = ["svipm"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
tauri = { version = "2", features = [] }
ureq = { version = "3.3.0", features = ["json", "platform-verifier", "win-system-proxy"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
